--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shoes</a>
+              <a class="nav-link" href="#shoes">Shoes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Backpack</a>
+              <a class="nav-link" href="#backpack">Backpack</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Subscribe</a>
+                <a class="nav-link" href="#subscribe">Subscribe</a>
             </li>
           </ul>
         </div>
@@ -95,6 +95,111 @@
           </div>
     </div>
 </section>
+<section class="prodect-section">
+    <div class="container catagories">
+        <div class="row">
+            <div class="col-md-4">
+               <div class="catagories__item1 d-flex justify-content-between align-items-center">
+                <h1>Watch</h1>
+                <img src="./resources/img/categories/watch.png" alt="">
+               </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="catagories__item2 d-flex justify-content-between align-items-center">
+                <h1>Bag</h1>
+                <img src="./resources/img/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="catagories__item3 d-flex justify-content-between align-items-center">
+                    <h1>Shoes</h1>
+                    <img src="./resources/img/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="shoes">
+    <div class="container">
+        <h3>Shoes</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/shoes/shoe-1.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Supply 350</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$120</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/shoes/shoe-2.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Nike 360</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$320</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/shoes/shoe-3.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Red Airmax</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$350</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+          </div>
+    </div>
+</section>
+<section id="backpack">
+    <div class="container">
+        <h3>Backpack</h3>
+        <div class="card-deck">
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/bags/bag-1.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Red Bag</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$120</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/bags/bag-2.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Blue Bag</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$320</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="./resources/img/bags/bag-3.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Black Bag</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5>$350</h5>
+                <button class="btn-Buy">Buy Now</button>
+              </div>
+            </div>
+          </div>
+    </div>
+</section>
+<section id="subscribe">
+    <div class="container d-flex justify-content-center align-items-center orange-bg subscribe">
+      <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales</h6>
+        <input class="form-control"type="text">
+        <button class="btn-Buy">SUBMIT</button>
+      </div>
+    </div>
+</section>
+<footer>
+    <small>© 2020.Panda Commerce.All rights reseverd</small>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
 integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" 
